--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <i class="fa fa-bars" id="nav-btn" aria-hidden="true"></i>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navContent">
+            <div class="search-container">
+                <form action="" method="GET" class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search here..." aria-label="Search">
+                    <button id="search-btn" class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+              </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
@@ -64,7 +70,7 @@
               </div>
           </div>
           <div class="carousel-item"data-interval="4000">
-            <img src="UIUX.jpg" class="d-block w-100" alt="...">
+            <img src="UI_UX.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
                 <p>UI/UX DESIGNING</p>
               </div>
