--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </div>
           </div>
           <div class="carousel-item"data-interval="4000">
-            <img src="UI_UX.jpg" class="d-block w-100" alt="...">
+            <img src="UIUX.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
                 <p>UI/UX DESIGNING</p>
               </div>
