--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <nav id="navs" class="navbar navbar-light bg-light navbar-expand-md py-0 fixed-top">
+    <section id="navd">
+    <nav id="navs" class="navbar navbar-light bg-light navbar-expand-l py-0 fixed-top">
         <a class="navbar-brand" href="#"><section class="brand-icon"><span id="brand-icon1"><i class="fa fa-circle" aria-hidden="true"></i></span><span id="brand-icon2"><i class="fa fa-circle" aria-hidden="true"></i></span><span id="brand-icon3"><i class="fa fa-circle" aria-hidden="true"></i></span></section> UCW Web</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle-navigation">
             <i class="fa fa-bars" id="nav-btn" aria-hidden="true"></i>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navContent">
-            <div class="search-container">
-                <form action="" method="GET" class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search here..." aria-label="Search">
-                    <button id="search-btn" class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+                <form>
+                   <input type="text"  name="search" placeholder="search..">
                   </form>
-              </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
@@ -41,8 +39,9 @@
             </ul>
         </div>
     </nav>
-    
+    </section>
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <main>
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -85,11 +84,12 @@
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-          </a>
+        </a>
+        </main>
       </div>
       <div class="container">
         <h1 class="text-heading" style="text-align: center; ">Why UCW?</h1>
