--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 </head>
 <body>
     <section id="navd">
-    <nav id="navs" class="navbar navbar-light bg-light navbar-expand-l py-0 fixed-top">
+    <nav id="navs" class="navbar navbar-light bg-light navbar-expand-lg py-0 fixed-top">
         <a class="navbar-brand" href="#"><section class="brand-icon"><span id="brand-icon1"><i class="fa fa-circle" aria-hidden="true"></i></span><span id="brand-icon2"><i class="fa fa-circle" aria-hidden="true"></i></span><span id="brand-icon3"><i class="fa fa-circle" aria-hidden="true"></i></span></section> UCW Web</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="toggle-navigation">
             <i class="fa fa-bars" id="nav-btn" aria-hidden="true"></i>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navContent">
-                <form>
-                   <input type="text"  name="search" placeholder="search..">
+            <section id="abs">
+                <form action="http://www.youtube.com/results/">
+                   <input type="text" placeholder="search..." name="search_query" >
+                   <button id="fa1"><i class="fa fa-search"></i></button>
                   </form>
+            </section>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
